--- a/referencias.bib
+++ b/referencias.bib
@@ -688,3 +688,1018 @@ year = {1939},
 address = {Minnesota},
 }
 
+@Book{HARVEY,
+author = {HARVEY, D.},
+title = {\textbf{Explanation in Geography.}},
+publisher = {E Arnold},
+year = {1969},
+address = {London},
+}
+
+@Book{HAZZARD,
+author = {HAZZARD, E.},
+title = {\textbf{OpenLayers 2.10 Beginner´s Guide.}},
+publisher = {Packt Publishing},
+year = {2011},
+}
+
+@Article{HERRING_etal88,
+author = {HERRING, J., LARSEN, R..; SHIVAKUMAR, J.},
+title = {\textbf{Extensions to the SQL language to support spatial analysis in a topological data base.}},
+journal = {Proceedings of GIS/L IS 88, San Antonio},
+year = {1988},
+pages = {741--750},
+}
+
+@Manual{IBM_02,
+title = {\textbf{IBM DB2 Spatial Extender: user’s guide and reference.}},
+author = {IBM},
+note = {http://www.ibm.com.br},
+year = {2002}
+}
+
+@Manual{IBM_16,
+title = {\textbf{Informix Spatial.}},
+author = {IBM},
+note = {http://www-01.ibm.com/software/data/informix/spatial/},
+year = {2016}
+}
+
+@Article{INGRAM_PHILLIPS,
+author = {INGRAM, K.; PHILLIPS, W.},
+title = {\textbf{Geographic information processing using a SQL-based query language.}},
+journal = {Proceedings of AUTO-CARTO 8, Eighth International Symposium on Computer-Assisted Cartography, Baltimore},
+year = {1987},
+pages = {326--335},
+}
+
+@MastersThesis{IOSIFESCU_09,
+author = {IOSIFESCU I.},
+title = {Design of a General Architecture for GIS.},
+school = {ETH Zurich},
+year = {2009},
+address = {Switzerland},
+}
+
+@PhdThesis{IOSIFESCU_11,
+author = {IOSIFESCU I.},
+title = {\textbf{Cartographic Web Services.}},
+school = {ETH Zurich},
+year = {2009},
+address = {Switzerland},
+}
+
+@Article{IOSIFESCU_13,
+author = {IOSIFESCU I.},
+title = {\textbf{Advancesin Web Service-Driven Cartography.}},
+journal = {Proceedings of the 26th International Cartographic Conference ICC},
+year = {2013},
+}
+
+@Manual{ISO,
+title = {\textbf{ISO 19128 Geographic Information: Web Map Server Interface.}},
+author = {ISO},
+edition = {International Organization for Standardization, ISO Technical Committee 211},
+year = {2005}
+}
+
+@Manual{JÜRGENS_JUNGHERR,
+title = {\textbf{A Tutorial For Using Twitter Data in the Social Sciences: Data Collection, Preparation, and Analysis.}},
+author = {JÜRGENS, P.; JUNGHERR, A.},
+note = {http://ssrn.com/abstract=2710146},
+year = {2016}
+}
+
+@Article{KEIDEL_etal11,
+author = {KEIDEL, G. A., CRUZ, C.B.M., RICHTER, M. CARIS, E. A. P., SEABRA, V. S.},
+title = {\textbf{Construção de Indicadores Favoráveis à Recuperação de Ecossistemas na Bacia do Rio São João.}},
+journal = {Anais da I Jornada de Geotecnologias do Rio de Janeiro. UFRJ},
+year = {2011},
+}
+
+@Manual{KERR,
+title = {\textbf{Alternative Approaches to Parallel GIS Processing.}},
+author = {KERR, N. T.},
+note = {http://www.nathankerr.com/projects/parallel-gis-processing/alternative_approaches_to_parallel_gis_processing.html},
+year = {2012}
+}
+
+@Article{KÖSTERS_etal97,
+author = {KÖSTERS, G.; PAGEL, B.; SIX, H.},
+title = {\textbf{GIS application development with GeoOOA.}},
+journal = {International Journal of Geographic Information Science},
+year = {1997},
+volume = {11},
+number = {4},
+pages = {307--335},
+}
+
+@Book{KROPLA,
+author = {KROPLA, B.},
+title = {\textbf{Beginning MapServer: Open Source GIS Development.}},
+publisher = {Apress},
+year = {2005},
+}
+
+@Manual{KUNICKI,
+title = {\textbf{WPS With GeoServer.}},
+author = {KUNICKI, T.},
+edition = {{FOSS4G} 2013 Nottingham},
+note = {http://2013.foss4g.org/conf/programme/freeworkshops.html},
+year = {2013}
+}
+
+@Manual{KWUN,
+title = {\textbf{Big size meteorological data processing and mobile displaying system using PostgresSQL and GeoServer.}},
+author = {KWUN, J.},
+edition = {{FOSS4G} 2014 Portland},
+note = {https://vimeo.com/106221099},
+year = {2014}
+}
+
+@Book{LATOUR,
+author = {LATOUR, B},
+title = {\textbf{Jamais fomos modernos: ensaio de antropologia simétrica.}},
+year = {1994},
+address = {Rio de Janeiro},
+}
+
+@Article{LAWDER_KING,
+author = {LAWDER, J. K.; KING, P. J. H.},
+title = {\textbf{Using Space-Filling Curves for Multi-dimensional Indexing.}},
+journal = {British National Conference on Databases: Advances in Databases},
+year = {2000},
+pages = {20--35},
+}
+
+@Manual{LEAFLET,
+title = {\textbf{Leaflet.js}},
+author = {LEAFLET},
+note = {http://leafletjs.com},
+year = {2015}
+}
+
+@Manual{LEMOINE,
+title = {\textbf{OpenLayers 3: a unique mapping library.}},
+author = {LEMOINE, E.},
+edition = {{FOSS4G} 2014 Portland},
+note = {https://vimeo.com/107531481},
+year = {2014}
+}
+
+@Book{LISBOA_FILHO,
+author = {LISBOA FILHO, J.},
+title = {\textbf{Modelos de dados conceituais para sistemas de informação geográfica.}},
+publisher = {UFRGS},
+year = {1997},
+address = {Porto Alegre},
+}
+
+@Book{LONGLEY_etal13,
+author = {LONGLEY, P. A., GOODCHILD, M. F., MAGUIRE, D. J., RHIND, D. W.},
+title = {\textbf{Sistemas e Ciência da Informação Geográfica}},
+publisher = {Bookman},
+year = {2013},
+address = {Porto Alegre},
+edition = {3},
+}
+
+@Book{LUNA,
+author = {LUNA, F. D.},
+title = {\textbf{Introduction to 3D Programming with DirectX 10.}},
+publisher = {Jones \& Bartlett Publishers},
+year = {2008},
+}
+
+@Book{MacEACHREN,
+author = {MacEACHREN, A. M.},
+title = {\textbf{How Maps work: representation, visualization and desing.}},
+publisher = {Guilford Press},
+year = {1995},
+address = {New York},
+edition = {1},
+}
+
+@Manual{MALONE,
+title = {\textbf{How SimpleGeo Built a Scalable Geospatial Database with Apache Cassandra.}},
+author = {MALONE, M.},
+note = {http:// www.readwriteweb.com/cloud/2011/02/videosimplegeo- cassandra.php},
+year = {2012}
+}
+
+@Manual{MAPBOX_JS,
+title = {\textbf{Mapbox.js}},
+author = {MAPBOX},
+note = {https://www.mapbox.com/mapbox.js/api/v2.4.0},
+year = {2016}
+}
+
+@Manual{MAPBOX_GLJS,
+title = {\textbf{Mapbox GL JS}},
+author = {MAPBOX},
+note = {https://www.mapbox.com/mapbox-gl-js/api/},
+year = {2016}
+}
+
+@Book{MARCEAU_BENENSON,
+author = {MARCEAU, D. J.; BENENSON, I.},
+title = {\textbf{Advanced Geosimulation Models.}},
+publisher = {Bentham Science Publishers Ltd.},
+year = {2011},
+}
+
+@Book{MARQUEZ,
+author = {MARQUEZ, A.},
+title = {\textbf{PostGIS Essentials.}},
+publisher = {Packt Publishing},
+year = {2015},
+address = {UK},
+}
+
+@Book{MATSUDA_LEA,
+author = {MATSUDA, K.; LEA, R.},
+title = {\textbf{WebGL Programming Guide: Interactive 3D Graphics Programming with WebGL.}},
+publisher = {Addison-Wesley Professional},
+year = {2013},
+address = {EUA},
+}
+
+@Book{MELTON,
+author = {MELTON, J.},
+title = {\textbf{AdvancedSQL: 1999 - Understanding Object-Relational and Other Advanced Features.}},
+publisher = {Morgan Kaufmann},
+year = {2003},
+}
+
+@Article{MELTON_EISENBERG,
+author = {MELTON, J; EISENBERG, A.},
+title = {\textbf{SQL multimedia and application packages (SQL/MM).}},
+journal = {ACM SIGMOD},
+year = {2001},
+volume = {30},
+number = {4},
+pages = {97--102},
+}
+
+@Book{MENDONÇA,
+author = {MENDONÇA, F.},
+title = {\textbf{Geografia e meio ambiente.}},
+publisher = {Contexto},
+year = {2005},
+address = {São Paulo},
+edition = {8},
+}
+
+@Book{MENEZES_FERNANDES,
+author = {MENEZES, P. M. L.; FERNANDES, M. C.},
+title = {\textbf{Roteiro de Cartografia.}},
+publisher = {Oficina de Textos},
+year = {2013},
+address = {São Paulo},
+}
+
+@Manual{MICROSOFT,
+title = {\textbf{Delivering location intelligence with spatial data.}},
+author = {MICROSOFT},
+note = {http://www.microsoft.com},
+year = {2008}
+}
+
+@Book{MONTEIRO_01,
+author = {MONTEIRO, C. A. de F.},
+title = {\textbf{Geossistemas: a história de uma procura.}},
+publisher = {Contexto},
+year = {2001},
+address = {São Paulo},
+edition = {2},
+}
+
+@Article{MONTEIRO_06,
+author = {MONTEIRO, C. A. de F.},
+title = {\textbf{Geografia entre os séculos XX e XXI: minha vivência na 2ª metade do 1º e na entrada do 2º e inquietações sobre o futuro.}},
+journal = {GEOgraphia},
+year = {2006},
+volume = {8},
+number = {16},
+pages = {pages},
+}
+
+@Book{MORIN,
+author = {MORIN, E.},
+title = {\textbf{Ciência com consciência.}},
+publisher = {Bertrand Brasil},
+year = {2005},
+address = {Rio de Janeiro},
+edition = {7},
+}
+
+@Article{MOURA,
+author = {MOURA, A.C.M.},
+title = {\textbf{A importância dos metadados no uso das Geotecnologias e na difusão da Cartografia Digital.}},
+journal = {Seminário Nacional sobre Mapeamento Sistemático},
+year = {2005},
+volume = {volume},
+number = {number},
+pages = {1--18},
+}
+
+@Manual{MYSQL,
+title = {\textbf{MySQL Spatial.}},
+author = {MYSQL},
+note = {http://dev.mysql.com/doc/refman/5.7/en/spatial-extensions.html},
+year = {2016}
+}
+
+@Book{NETELER_MITASOVA,
+author = {NETELER, M.; MITASOVA, H.},
+title = {\textbf{Open Source GIS: A GRASS GIS approach.}},
+year = {2008},
+edition = {3},
+}
+
+@Article{NIEVERGELT_etal84,
+author = {NIEVERGELT, J.; HINTERBERGER, H.; SEVCIK, K. C.},
+title = {\textbf{The Grid File: An Adaptable, Symmetric Multikey File Structure.}},
+journal = {ACM Transactions on Database Systems},
+year = {1984},
+number = {1},
+pages = {38--71},
+}
+
+@Manual{NPGSQL,
+title = {\textbf{npgsql}},
+author = {NPGSQL},
+note = {http://www.npgsql.org},
+year = {2016}
+}
+
+@Book{OBE_etal11,
+author = {OBE, R.; HSU, L.; RAMSEY, P.},
+title = {\textbf{PostGIS in Action.}},
+publisher = {Manning Publications},
+year = {2011},
+edition = {1},
+}
+
+@Manual{OGC_02a,
+title = {\textbf{Styled Layer Descriptor Implementation Specification.}},
+author = {Open Geospatial Consortium},
+note = {http://www.opengeospatial.org},
+year = {2002}
+}
+
+@Manual{OGC_02b,
+title = {\textbf{Filter Encoding.}},
+author = {Open Geospatial Consortium},
+note = {http://www.opengeospatial.org},
+year = {2002}
+}
+
+@Manual{OGC_02c,
+title = {\textbf{Web Feature Service.}},
+author = {Open Geospatial Consortium},
+note = {http://www.opengeospatial.org},
+year = {2002}
+}
+
+@Manual{OGC_02d,
+title = {\textbf{Geography Markup Language.}},
+author = {Open Geospatial Consortium},
+note = {http://www.opengeospatial.org},
+year = {2002}
+}
+
+@Manual{OGC_12a,
+title = {\textbf{OpenGIS Implementation Specification for Geographic information - Simple feature access - Part 1: Common architecture.}},
+author = {Open Geospatial Consortium},
+note = {http://www.opengeospatial.org},
+year = {2012}
+}
+
+@Manual{OGC_12b,
+title = {\textbf{OpenGISImplementation Specification for Geographic information - Simple feature access - Part 2: SQL option.}},
+author = {Open Geospatial Consortium},
+note = {http://www.opengeospatial.org},
+year = {2012}
+}
+
+@Manual{OGIS,
+title = {\textbf{OpenGIS simple features specification for SQL revision 1.1.}},
+author = {OGIS},
+year = {1995}
+}
+
+@Book{OOI,
+author = {OOI, B.},
+title = {\textbf{Efficient Query Processing in Geographic Information Systems.}},
+publisher = {Springer},
+year = {1990},
+address = {New York},
+}
+
+@Book{OOI_SAKIS_DAVIS,
+author = {OOI, B.; SACKS-DAVIS, R.},
+title = {\textbf{Query optimization in an extended DBMS. Third International Conference on Foundations of Data Organization and Algorithms ({FODO})}},
+publisher = {Springer},
+year = {1989},
+address = {New York},
+}
+
+@Article{OOI_etal89,
+author = {OOI, B., SACKS-DAVIS, R.; MCDONELL, K.},
+title = {\textbf{Extending a DBMS for geographic applications.}},
+journal = {Proceedings of IEEE Fifth International Conference on Data Engineering},
+year = {1989},
+pages = {590--597},
+}
+
+@Article{OLIVEIRA_etal97,
+author = {OLIVEIRA, J. L.; PIRES, F.; MEDEIROS, C. M. B.},
+title = {\textbf{An environment for modeling and design of geographic applications.}},
+journal = {GeoInformatica},
+year = {1997},
+volume = {1},
+number = {1},
+pages = {29--58},
+}
+
+@Book{OOSTEROM_ZLATANOVA,
+author = {OOSTEROM, P. V.; ZLATANOVA, S.},
+title = {\textbf{Creating Spatial Information Infrastructures: Towards the Spatial Semantic Web.}},
+publisher = {CRC Press},
+year = {2008},
+}
+
+@Manual{OPENBAY,
+title = {\textbf{Openbay Project}},
+author = {OPENBAY},
+note = {https://github.com/isohuntto/openbay/blob/master/src/protected/data/schema.mysql.sql},
+year = {2015}
+}
+
+@Manual{OPENLAYERS,
+title = {\textbf{Limited layer extent.}},
+author = {OPENLAYERS},
+note = {http://openlayers.org/en/v3.2.0/examples/layer-extent.html},
+year = {2015}
+}
+
+@Book{OPENSHAW,
+author = {OPENSHAW, S.},
+title = {\textbf{GeoComputation}},
+publisher = {CRC Press},
+year = {2014},
+}
+
+@Book{OPENSHAW_OPENSHAW,
+author = {OPENSHAW, S.; OPENSHAW, C.},
+title = {\textbf{Artificial Intelligence in Geography.}},
+publisher = {John Wiley},
+year = {1997},
+address = {Chichester},
+}
+
+@Manual{ORACLE,
+title = {\textbf{Oracle Spatial guide.}},
+author = {ORACLE},
+note = {http://www.oracle.com},
+year = {2003}
+}
+
+@Manual{ORACLE,
+title = {\textbf{Oracle Spatial - topology and network data models developers guide.}},
+author = {ORACLE},
+note = {http://www.oracle.com},
+year = {2008}
+}
+
+@Manual{OSM,
+title = {\textbf{OpenStreetMap API.}},
+author = {OSM},
+note = {http://wiki.openstreetmap.org/wiki/API_v0.6},
+year = {2016}
+}
+
+@Manual{PMAPPER,
+title = {\textbf{A MapServer PHP/MapScript Framework.}},
+author = {PMAPPER},
+note = {http://svn.pmapper.net/trac/wiki/PluginsQuery},
+year = {2012}
+}
+
+@Article{PARENT_etal99,
+author = {PARENT, C.; SPACCAPIETRA, S.; ZIMANYI, E.},
+title = {\textbf{Spatio-temporal conceptual models: data structures plus space plus time.}},
+journal = {7th International Symposium on Advances in Geographic Information Systems},
+year = {1999},
+pages = {26--33},
+}
+
+@Book{PENROSE,
+author = {PENROSE, R.},
+title = {\textbf{The Emperor's New Mind: Concerning Computers, Minds, and the Laws of Physics.}},
+publisher = {Oxford University Press},
+year = {1989},
+address = {Oxford},
+}
+
+@Book{PEREZ,
+author = {PEREZ, A. S.},
+title = {\textbf{OpenLayers Cookbook: 60 recipes to create GIS web applications with the open source JavaScript library.}},
+publisher = {Packt Publishing},
+year = {2012},
+address = {Birmingham},
+}
+
+@Book{PETERSON,
+author = {PETERSON, M. P.},
+title = {\textbf{Interactive and animated cartography.}},
+publisher = {Prentice Hall},
+year = {1995},
+address = {New York},
+}
+
+@MastersThesis{PIMENTA,
+author = {PIMENTA F. M.},
+title = {Desenvolvimento de interfaces para gerar mapas interativos baseados em bancos de dados georreferenciados.},
+school = {Universidade Federal de São João del-Rei},
+year = {2011},
+address = {Sete Lagoas},
+}
+
+@MastersThesis{PIMENTA_etal12,
+author = {PIMENTA, F. M.; LANDAU, E. C.; HIRSCH, A.; GUIMARÃES, D.P.},
+title = {Servidores de Mapas: Programação para disponibilizar dados geográficos multidisciplinares utilizando tecnologias livres.},
+school = {Embrapa},
+year = {2012},
+address = {Brasília-DF},
+}
+
+@Book{POPPER,
+author = {POPPER, K.},
+title = {\textbf{A Lógica da Pesquisa Científica.}},
+publisher = {EDUSP},
+year = {1975},
+address = {São Paulo},
+}
+
+@Book{PORTO_GONÇALVES,
+author = {PORTO-GONÇALVES, C. W.},
+title = {\textbf{Os (des)caminhos do meio ambiente.}},
+publisher = {Contexto},
+year = {2006},
+address = {São Paulo},
+edition = {14},
+}
+
+@Manual{POSTGIS,
+title = {\textbf{Using PostGIS: Building Applications.}},
+author = {POSTGIS},
+note = {http://postgis.net/docs/manual-1.4/ch05.html#id424349},
+year = {2015}
+}
+
+@Book{PREPARATA_SHAMOS,
+author = {PREPARATA, F.; SHAMOS, M.},
+title = {\textbf{Computational Geometry.}},
+publisher = {Springer},
+year = {1985},
+address = {New York},
+}
+
+@Book{PRIGOGINE,
+author = {PRIGOGINE, I.},
+title = {\textbf{O fim das certezas: tempo, caos e as leis da natureza.}},
+publisher = {UNESP},
+year = {1996},
+address = {São Paulo},
+}
+
+@Manual{QGIS,
+title = {\textbf{Quantum GIS Geographic Information System. Open Source Geospatial Foundation Project.}},
+author = {QUANTUM GIS DEVELOPMENT TEAM},
+note = {http://qgis.osgeo.org},
+year = {2012}
+}
+
+@Article{QUEIROZ_etal13,
+author = {QUEIROZ, G. B.; MONTEIRO, A. M. V.; CÂMARA, G.},
+title = {\textbf{Bancos de dados geográficos e sistemas nosql: onde estamos e para onde vamos.}},
+journal = {Revista Brasileira de Cartografia},
+year = {2013},
+volume = {3},
+number = {65},
+pages = {479--492},
+}
+
+@Book{QUEIROZ_FERREIRA,
+author = {QUEIROZ, G. B.; FERREIRA, K. R.},
+title = {\textbf{Tutorial sobre Bancos de Dados Geográficos.}},
+publisher = {Instituto Nacional de Pesquisas Espaciais - INPE},
+year = {2006},
+}
+
+@Manual{UML,
+title = {\textbf{The Unified Modeling Language: notation guide.}},
+author = {RATIONAL SOFTWARE CORPORATION},
+year = {1997}
+}
+
+@Book{REDMOND_WILSON,
+author = {REDMOND, E.; WILSON, J. R.},
+title = {\textbf{Seven Databases in Seven Weeks: A Guide to Modern Databases and the NoSQL Movement.}},
+publisher = {Pragmatic Bookshelf},
+year = {2012},
+}
+
+@Book{RIGAUX_etal02,
+author = {RIGAUX, P.; SCHOLL, M.; VOISARD, A.},
+title = {\textbf{Spatial Databases with application to GIS.}},
+publisher = {Morgan Kaufmann Publishers},
+year = {2002},
+}
+
+@Article{ROUSSOPOULOS_etal88,
+author = {ROUSSOPOULOS, N., FALOUTSOS, C.; SELLIS, T.},
+title = {\textbf{An efficient pictorial database system for PSQL.}},
+journal = {IEEE Transactions on Software Engineering},
+year = {1988},
+pages = {630--638},
+}
+
+@Article{RUDEL_etal00,
+author = {RUDEL TK.; PEREZ-LUGO M.; ZICHAL H.},
+title = {\textbf{When fields revert to forest: development and spontaneous reforestation in Post-War Puerto Rico.}},
+journal = {The Professional Geographer},
+year = {2000},
+pages = {386–-397},
+}
+
+@Book{RUMBAUGH_etal91,
+author = {RUMBAUGH, J.; BLAHA, M.; PREMERLANI, W.; EDDY, F.; LORENSEN, W.},
+title = {\textbf{Object-oriented Modeling and Design.}},
+publisher = {Prentice-Hall},
+year = {1991},
+}
+
+@Book{RUMBAUGH_etal04,
+author = {RUMBAUGH, J.; JACOBSON, I.; BOOCH, G.},
+title = {\textbf{The Unified Modeling Language Reference Manual.}},
+publisher = {Pearson Education Inc},
+year = {2004},
+address = {Boston},
+edition = {2},
+}
+
+@Book{SADALAGE_FOWLER,
+author = {SADALAGE, P. J.; FOWLER, M.},
+title = {\textbf{NoSQL Distilled: A Brief Guide to the Emerging World of Polyglot Persistence.}},
+publisher = {Addison-Wesley Professional},
+year = {2012},
+}
+
+@Book{SANTOS_06,
+author = {SANTOS, B. de S.},
+title = {\textbf{Um discurso sobre as ciências.}},
+publisher = {Cortez},
+year = {2006},
+address = {São Paulo},
+edition = {4},
+}
+
+@Book{SANTOS,
+author = {SANTOS, M.},
+title = {\textbf{Por uma Geografia Nova.}},
+publisher = {Hucitec},
+year = {1978},
+address = {São Paulo},
+}
+
+@Book{SANTOS,
+author = {SANTOS, M.},
+title = {\textbf{A Natureza do Espaço: Técnica e Tempo. Razão e Emoção.}},
+publisher = {Hucitec},
+year = {ye1996ar},
+address = {São Paulo},
+}
+
+@Article{SCHAEFER,
+author = {SCHAEFER, F.},
+title = {\textbf{Exceptionalism in Geography: A Methodological Examination.}},
+journal = {AAAG},
+year = {1953},
+volume = {18},
+number = {3},
+pages = {226--249},
+}
+
+@Manual{SCHAUB,
+title = {\textbf{Getting started with OpenLayers 3.}},
+author = {SCHAUB, T.},
+edition = {{FOSS4G} 2014 Portland},
+note = {https://vimeo.com/106227909},
+year = {2014}
+}
+
+@PhdThesis{SEABRA,
+author = {SEABRA, V. S.},
+title = {\textbf{Análise da paisagem em apoio aos estudos de favorabilidade à recuperação  florestal  na  bacia  hidrográfica  do  rio  São  João.}},
+school = {Programa de Pós Graduação em Geografia – PPGG, Universidade Federal do Rio de Janeiro},
+year = {2012},
+address = {Rio de Janeiro},
+}
+
+@Article{SEABRA_CRUZ,
+author = {SEABRA, V. S.; CRUZ, C.B.M.},
+title = {\textbf{Mapeamento da Dinâmica da Cobertura e Uso da Terra na Bacia Hidrográfica do Rio São João, RJ.}},
+journal = {Sociedade e Natureza},
+year = {2013},
+volume = {25},
+number = {2},
+pages = {411--426},
+}
+
+@Article{SHANNON,
+author = {SHANNON, C.},
+title = {\textbf{A Mathematical Theory of Communication.}},
+journal = {Bell System Tech},
+year = {1948},
+volume = {27},
+pages = {379–-423},
+}
+
+@Manual{SHARPMAP,
+title = {\textbf{SharpMap.NET.}},
+author = {SHARPMAP},
+note = {https://sharpmap.codeplex.com},
+year = {2015}
+}
+
+@Book{SHEKHAR_CHAWLA,
+author = {SHEKHAR, S.; CHAWLA, S.},
+title = {\textbf{Spatial databases: A tour.}},
+publisher = {Prentice Hall},
+year = {2003},
+}
+
+@Article{SHEKHAR_etal97,
+author = {SHEKHAR, S.; COYLE, M.; GOYAL, B.; LIU, D.; SARKAR, S.},
+title = {\textbf{Data models in geographic information systems.}},
+journal = {Communications of the ACM},
+year = {1997},
+volume = {40},
+number = {4},
+pages = {103--111},
+}
+
+@Article{SHELLER_URRY,
+author = {SHELLER, M., URRY, J.},
+title = {\textbf{The new mobilities paradigm.}},
+journal = {Environment and Planning A},
+year = {2006},
+pages = {207–-226},
+}
+
+@Book{SHEPPARD,
+author = {SHEPPARD, E.},
+title = {\textbf{Produção de conhecimento através do Sistema de Informações Geográficas Crítico: genealogia e perspectivas.}},
+publisher = {IPPUR-UFRJ},
+year = {2008},
+address = {Rio de Janeiro},
+}
+
+@Book{SHREINER_etal13,
+author = {SHREINER, D.; SELLERS, G.; KESSENICH, J.; LICEA-KANE, B.},
+title = {\textbf{OpenGL Programming Guide.}},
+publisher = {Pearson Education Inc},
+year = {2013},
+address = {New Jersey},
+edition = {8},
+}
+
+@Article{SIEBER_etal11,
+author = {SIEBER, R. E.; WELLEN, C. C., JIN Y.},
+title = {\textbf{Spatial cyberinfrastructures, ontologies, and the humanities.}},
+journal = {Proceedings of the National Academy of Science},
+year = {2011},
+pages = {5504–-5509},
+}
+
+@Article{SILVA_KEITH,
+author = {SILVA, E. A.; KEITH C. C.},
+title = {\textbf{Calibration of the SLEUTH Urban Growth Model for Lisbon and Porto.}},
+journal = {Computers, Environment and Urban Systems},
+year = {2002},
+pages = {525–-552},
+}
+
+@Article{SLUTER,
+author = {SLUTER, C. R.},
+title = {\textbf{Sistemas especialistas para a geração de mapas temáticos.}},
+journal = {Revista Brasileira de Cartografia},
+year = {2001},
+number = {53},
+pages = {45--64},
+}
+
+@Book{SOARES_FILHO_etal09,
+author = {SOARES-FILHO, B.; RODRIGUES, H.; LELLES, W.},
+title = {\textbf{Modeling Environmental Dynamics with Dinamica EGO.}},
+publisher = {CSR},
+year = {2009},
+address = {Belo Horizonte},
+edition = {1},
+}
+
+@Book{SOWA,
+author = {SOWA, J. F.},
+title = {\textbf{Knowledge Representation: Logical, Philosophical, and Computational Foundations.}},
+publisher = {Brooks Cole},
+year = {2000},
+address = {Pacific Grove},
+}
+
+@Book{STONEBRAKER,
+author = {STONEBRAKER, M.},
+title = {\textbf{Object-relational DBMSs: the next great wave.}},
+publisher = {Morgan Kaufmann},
+year = {1996},
+address = {San Francisco},
+}
+
+@Article{STONEBRAKER_etal13,
+author = {STONEBRAKER, M., BROWN, P., ZHANG, D., BECLA, J.},
+title = {\textbf{SciDB: A database management system for applications with complex analytics.}},
+journal = {Computing in Science & Engineering},
+year = {2013},
+volume = {15},
+number = {3},
+pages = {54–-62},
+}
+
+@Article{SUERTEGARAY_NUNES,
+author = {SUERTEGARAY, D. M. A.; NUNES, J. O. R.},
+title = {\textbf{A natureza da geografia física na geografia.}},
+journal = {Terra Livre},
+year = {2001},
+number = {17},
+pages = {11--24},
+}
+
+@Book{SUERTEGARAY,
+author = {SUERTEGARAY, D. M. A.},
+title = {\textbf{Geografia física, geografia ambiental ou geografia e ambiente}},
+publisher = {UFPR},
+year = {2004},
+address = {Curitiba},
+}
+
+@Book{SVENNERBERG,
+author = {SVENNERBERG, G.},
+title = {\textbf{Beginning Google Maps API 3.}},
+publisher = {Apress},
+year = {2010},
+address = {EUA},
+edition = {2},
+}
+
+@Book{SZALEY_BLAKELEY,
+author = {SZALEY, A. S.; BLAKELEY, J. A.},
+title = {\textbf{Gray’s laws: database-centric computing in science.}},
+publisher = {Microsoft},
+year = {2009},
+address = {Redmond},
+}
+
+@Book{TANENBAUM_02,
+author = {TANENBAUM, A.},
+title = {\textbf{Distributed Systems: Principles and Paradigms.}},
+publisher = {Prentice Hall.},
+year = {2002},
+}
+
+@Book{TANENBAUM_11,
+author = {TANENBAUM, A.},
+title = {\textbf{Computer Networks.}},
+publisher = {Prentice Hall},
+year = {2011},
+edition = {5},
+}
+
+@Manual{TANGRAM,
+title = {\textbf{Mapzen Tangram.}},
+author = {TANGRAM},
+note = {https://github.com/tangrams/tangram},
+year = {2016}
+}
+
+@Manual{TERADATA,
+title = {\textbf{Teradata Geospatial Feature.}},
+author = {TERADATA},
+note = {http://br.teradata.com/Resources/Demos/Teradata-Geospatial-FeaturesOverview/?LangType=1046\&LangSelect=true},
+year = {2016}
+}
+
+@Article{TOBLER,
+author = {TOBLER, W.},
+title = {\textbf{A computer movie simulating urban growth in the Detroit region.}},
+journal = {Economic Geography},
+year = {1970},
+volume = {46},
+number = {2},
+pages = {234--240},
+}
+
+@Article{TURING,
+author = {TURING, A. M.},
+title = {\textbf{Computing machinery and intelligence.}},
+journal = {Mind},
+year = {1950},
+pages = {433--460},
+}
+
+@Book{TURTON,
+author = {TURTON, I.},
+title = {\textbf{GeoTools. Open Source Approaches in Spatial Data Handling: Advances in Geographic Information Science.}},
+publisher = {Springer},
+year = {2010},
+}
+
+@Book{URBANO_CAGNACCI,
+author = {URBANO, F.; CAGNACCI, F.},
+title = {\textbf{Spatial Database for GPS Wildlife Tracking Data.}},
+publisher = {Springer International Publishing},
+year = {2014},
+address = {Switzerland},
+}
+
+@Article{WANG_WANG,
+author = {WANG, Y.; WANG, S.},
+title = {\textbf{Research and implementation on spatial data storage and operation based on Hadoop platform.}},
+journal = {International Conference on Geoscience and Remote Sensing},
+year = {2010},
+pages = {275--278},
+}
+
+@Article{WARMERDAM,
+author = {WARMERDAM, F.},
+title = {\textbf{The Geospatial Data Abstraction Library.}},
+journal = {Open Source Approaches in Spatial Data Handling: Advances in Geographic Information Science.},
+year = {2010},
+pages = {87--104},
+}
+
+@Book{WITTGENSTEIN,
+author = {WITTGENSTEIN, L.},
+title = {\textbf{Tractatus logico-philosophicus.}},
+publisher = {Gallimard},
+year = {1961},
+address = {Paris},
+}
+
+@Manual{WOLF,
+title = {\textbf{Philosophy of Language.}},
+author = {WOLF, M. P.},
+note = {http://www.iep.utm.edu/lang-phi},
+year = {2015}
+}
+
+@Manual{WOODIE,
+title = {\textbf{Array Databases: The Next Big Thing in Data Analytics?}},
+author = {WOODIE, A.},
+note = {http://www.datanami.com/2014/04/09/array_databases_the_next_big_thing_in_data_analytics_/},
+year = {2014}
+}
+
+@Article{WORBOYS_etal90,
+author = {WORBOYS, M. F.; HEARNSHAW, H. M.; MAGUIRE, D. J.},
+title = {\textbf{Object-oriented data modelling for spatial databases.}},
+journal = {International Journal of Geographic Information Systems},
+year = {1990},
+volume = {4},
+number = {4},
+pages = {369--383},
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
